More stuff to stop magnifying glass on press hold on iphone

--- a/styles/colour-adjust.css
+++ b/styles/colour-adjust.css
@@ -5,11 +5,13 @@ html, body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     font-size: 20px;
-    -webkit-touch-callout: none; /* Safari */
-    -webkit-user-select: none; /* Chrome */     
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; 
+    -webkit-touch-callout: none !important; /* Safari */
+    -webkit-user-drag: none !important;
+    -webkit-user-modify: none !important;
+    -webkit-user-select: none !important; /* Chrome */     
+       -moz-user-select: none !important; /* Firefox */
+        -ms-user-select: none !important; /* Internet Explorer/Edge */
+            user-select: none !important; 
 }
 
 .centre {
