--- a/styles/trials.css
+++ b/styles/trials.css
@@ -7,11 +7,13 @@
     border: 2px solid black;
     border-radius: 15px;
     font-size: 20px;
-    -webkit-touch-callout: none; /* Safari */
-    -webkit-user-select: none; /* Chrome */     
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; 
+    -webkit-touch-callout: none !important; /* Safari */
+    -webkit-user-drag: none !important;
+    -webkit-user-modify: none !important;
+    -webkit-user-select: none !important; /* Chrome */     
+       -moz-user-select: none !important; /* Firefox */
+        -ms-user-select: none !important; /* Internet Explorer/Edge */
+            user-select: none !important; 
 }
 
 .adjustColourButton:hover {
